# Wifi-guessing-game

./: Cargo.toml
src/: error_type.rs  lib.rs  main.rs  message.rs
src/communication/: center.rs  client_fetcher.rs  input.rs  mod.rs  pinger.rs  player_communication.rs  send_options.rs
src/db/: category.rs  context.rs  difficulty.rs  mod.rs  question.rs
src/db/opentdb/: mod.rs  opentdb_ctx.rs  response_parser.rs  url_builder.rs
src/game/: answer.rs  exchange.rs  game_loop.rs  mod.rs  rewards.rs  score_observer.rs
src/preparation/: game_prepare.rs  mod.rs
src/randomizer/: enum_randomizer.rs  mod.rs  rng.rs
src/test/: communication_test.rs  db_tests.rs  game_test.rs  mod.rs  preparation_test.rs
src/test/framework/: client.rs  mock_input.rs  mod.rs
